<resources>
    <string name="app_name">Eshop</string>
    <string name="string_register">注册</string>
    <string name="string_user_name">用户名</string>
    <string name="string_user_password">密码</string>
    <string name="string_login">登录</string>
    <string name="string_forget_password">忘记密码？</string>
    <string name="string_other_login">第三方登录</string>
    <string name="string_qq">QQ</string>
    <string name="string_wechat">微信</string>
    <string name="string_wei_blog">微博</string>
    <string name="string_register_phone_number">输入手机号</string>
    <string name="string_register_password">输入密码</string>
    <string name="string_confirm_password">确认密码</string>
    <string name="string_home">首页</string>
    <string name="string_classify">分类</string>
    <string name="string_trolley">购物车</string>
    <string name="string_person">我的</string>
    <string name="string_search">搜索</string>
    <string name="string_complete">完成</string>
    <string name="string_edit">编辑</string>
    <string name="string_select_all">全选</string>
    <string name="string_add_up">合计:</string>
    <string name="string_total_price">￥0.00</string>
    <string name="string_tips">不含运费</string>
    <string name="string_go_to_pay">结算(0)</string>
    <string name="string_share">分享宝贝</string>
    <string name="string_delete">删除</string>
    <string name="good_size">颜色：黑色；尺码：29</string>
    <string name="string_discount_price">折扣价</string>
    <string name="string_buy_num">X 0</string>
    <string name="string_shop_tips">店铺满99元包邮</string>
    <string name="string_num">0</string>
    <string name="store_name">天猫旗舰店</string>
    <string name="good_name">商品名称</string>
    <string name="good_price">商品价格</string>
    <string name="string_trolley_is_empty">购物车空空如也</string>
    <string name="string_already_foot">已经见底了</string>
    <string name="string_interest_num">1个</string>
    <string name="string_interest">关注</string>
    <string name="string_benefit_num">1张</string>
    <string name="string_benefit">优惠券</string>
    <string name="string_points_num">1000分</string>
    <string name="string_points">积分</string>
    <string name="string_person_order">我的订单</string>
    <string name="string_visit_record">浏览记录</string>
    <string name="string_person_place">收货地址</string>
    <string name="string_service_center">服务中心</string>
    <string name="string_about_us">关于我们</string>
    <string name="string_logout">退出登录</string>
    <string name="string_person_shop">我的店铺</string>
    <string name="string_good_category">商品种类</string>
    <string name="string_cancel">取消</string>
    <string name="string_original_price">原价</string>
    <string name="string_description">商品详情</string>
    <string name="string_add_good">添加商品</string>
    <string name="string_good_size">尺码</string>
    <string name="string_good_color">颜色</string>
    <string name="string_user_icon">头像</string>
    <string name="string_user_sex">性别</string>
    <string name="string_location">地区</string>
    <string name="string_input_user_name">输入用户名</string>
    <string name="string_phone_number">手机号码</string>
    <string name="string_expiry_date_to">有效期至</string>
    <string name="string_function_introduction">功能介绍</string>
    <string name="string_about_author">关于作者</string>
    <string name="string_version_update">版本更新</string>
    <string name="string_system_message">系统通知</string>
    <string name="string_version_own">研发中心 版权所有</string>
    <string name="string_copyright">CopyRight © 2017 All Rights Reserved</string>
    <string name="string_add_place">新增地址</string>
    <string name="string_concrete_place">用户详细地址</string>
    <string name="string_contract">联系人</string>
    <string name="string_name">姓名</string>
    <string name="string_male">先生</string>
    <string name="string_female">女士</string>
    <string name="string_phone">电话</string>
    <string name="string_place">收货地址</string>
    <string name="string_address">地址</string>
    <string name="string_confirm">确认</string>
    <string name="string_add_shop">创建店铺</string>
    <string name="string_shop_name">店铺名称</string>
    <string name="string_contract_way">联系方式</string>
    <string name="string_shop_description">店铺描述</string>
    <string name="string_shop_logo">店铺logo(门店图)</string>
    <string name="string_shop_images">店铺图片</string>
    <string name="string_shop_category">店铺分类</string>
    <string name="string_price">￥800</string>
    <string name="string_has_selected">已选</string>
    <string name="string_selected_place">送至</string>
    <string name="string_good_brand">品牌:</string>
    <string name="string_size">规格:</string>
    <string name="string_version">型号:</string>
    <string name="string_welcome_to_buy">欢迎购买</string>
    <string name="string_quantity">数量</string>
    <string name="string_shop">店铺</string>
    <string name="string_buy_soon">立即购买</string>
    <string name="string_add_to_trolley">加入购物车</string>
    <string name="string_reduce_price_awake">降价通知</string>
    <string name="string_commit_order">提交订单</string>
    <string name="string_recipient">收货人</string>
    <string name="string_delivery_way">配送方式</string>
    <string name="string_delivery_time">配送时间</string>
    <string name="string_remarks">买家留言</string>
    <string name="string_make_a_remark">备注一下</string>
    <string name="string_buy_anonymous">匿名购买</string>
    <string name="string_confirm_order">确认订单</string>
    <string name="string_rmb">元</string>
    <string name="string_wallet_pay">钱包支付</string>
    <string name="string_ali_pay">支付宝</string>
    <string name="string_wechat_pay">微信支付</string>
    <string name="string_confirm_pay">确认支付</string>
    <string name="string_order_number">订单编号</string>
    <string name="string_input_pay_password">请输入交易密码</string>
    <string name="string_please_input">请输入搜索内容</string>
    <string name="string_loading">正在加载...</string>
</resources>
