<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_toolbar_height"
        android:background="@color/colorPrimary"
        android:theme="@style/Theme.AppCompat.NoActionBar">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/string_contract"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="6dp"
            android:hint="@string/string_name"
            android:textColorHint="@color/lightgray"
            android:textSize="@dimen/dimen_text_size_tiny"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/string_user_sex"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small"/>

        <TextView
            android:id="@+id/tv_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_btn_sex"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/string_male"
            android:textColor="@drawable/selector_text_color"
            android:textSize="@dimen/dimen_text_size_tiny"/>

        <TextView
            android:id="@+id/tv_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_btn_sex"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/string_female"
            android:textColor="@drawable/selector_text_color"
            android:textSize="@dimen/dimen_text_size_tiny"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/string_phone"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/string_phone_number"
            android:inputType="phone"
            android:textColorHint="@color/lightgray"
            android:textSize="@dimen/dimen_text_size_tiny"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/string_address"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small"/>

        <EditText
            android:id="@+id/et_place"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:hint="@string/string_place"
            android:textColorHint="@color/lightgray"
            android:textSize="@dimen/dimen_text_size_tiny"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:text="@string/string_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_text_size_small"
        android:background="@drawable/selector_btn_confirm"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/string_delete"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_text_size_small"
        android:background="@drawable/selector_btn_delete"/>

</LinearLayout>
