<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/whitesmoke"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_toolbar_height"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_trolley"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_text_size_middle"/>

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/string_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_text_size_small"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/string_trolley_is_empty"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/dimen_text_size_small"
        android:drawableStart="@drawable/ic_empty_trolley"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <ExpandableListView
        android:id="@+id/elv_goods"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:childIndicator="@null"
        android:groupIndicator="@null">

    </ExpandableListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/lightgray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/cb_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="10dp"
            android:button="@drawable/bg_checkbox"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:minHeight="64dp"
            android:padding="4dp"
            android:text="@string/string_select_all"
            android:textColor="@color/gray"
            android:textSize="@dimen/dimen_text_size_small"/>

        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/string_add_up"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/dimen_text_size_small"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_total_price"
                        android:textColor="@color/orangered"
                        android:textSize="@dimen/dimen_text_size_small"
                        android:textStyle="bold"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/string_tips"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/dimen_text_size_small"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_go_to_pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/orange"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/string_go_to_pay"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/orange"
                android:gravity="center"
                android:text="@string/string_share"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_text_size_small"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/crimson"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/string_delete"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
